@@ -1,3 +1,9 @@
+2005-01-09 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc,
+	  src/Win_GParted.cc: call GParted_Core::find_supported_filesystems( ) in GParted_Core::GParted_Core() instead of Win_GParted::Win_GParted().
+	  Also replaced 0xFFFF with GDK_Delete to improve readability of the source.
+
 2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
 	* replaced atoi with atol .
